# gcd-authz

./: .env.example  .gitignore  CITATION.cff  Cargo.toml  LICENSE-MIT  README.md  docker-compose.eval.yml  flake.nix  run.sh
crates/tantalus-defenses/: Cargo.toml
crates/tantalus-defenses/src/: classifier.rs  embedding.rs  filter.rs  lib.rs  prompt.rs
crates/tantalus-env/: Cargo.toml
crates/tantalus-env/data/: filesystem.json  inbox.json  skills.json
crates/tantalus-env/src/: lib.rs
crates/tantalus-eval/: Cargo.toml
crates/tantalus-eval/src/: lib.rs
crates/tantalus-grammar/: Cargo.toml
crates/tantalus-grammar/src/: lib.rs
crates/tantalus-harness/: Cargo.toml
crates/tantalus-harness/src/: db.rs  lib.rs  main.rs
crates/tantalus-llm/: Cargo.toml
crates/tantalus-llm/src/: lib.rs
crates/tantalus-pipeline/: Cargo.toml
crates/tantalus-pipeline/data/: system-control.tmpl  system-round1.tmpl
crates/tantalus-pipeline/src/: factory.rs  lib.rs  prompt.rs  steps.rs  wins.rs
crates/tantalus-session/: Cargo.toml
crates/tantalus-session/src/: lib.rs
crates/tantalus-tools/: Cargo.toml
crates/tantalus-tools/src/: lib.rs
crates/tantalus-types/: Cargo.toml
crates/tantalus-types/src/: cost.rs  enums.rs  error.rs  ids.rs  lib.rs  message.rs  session.rs  tools.rs  wins.rs
data/classifier/: allowlist_phrases.json  denylist_phrases.json
docs/: HANDOFF.md  PLAN.md  findings_report.md  methodology.md  preregistration.md  proof.md
docs/adr/: 0001-sglang-xgrammar-high-throughput-inference.md  0002-structural-agent-loop-termination.md  0003-c-guided-least-privilege-grammar.md  0004-forced-denylist-sealed-sink-maximal-compromise-demonstration.md  0005-vllm-guidance-backend-mistral-anchor.md
docs/research/: RELATED_WORK_PERIMETER.md  RESEARCH_DESIGN.md  THESIS.md  THESIS_2.md
examples/: print_gbnf.rs
harness/: PROVENANCE.md  attack.py  corpus.json  corpus_fable.json  corpus_full.json  corpus_full_mistral.json  corpus_legitimate.json  corpus_legitimate_v2.json  corpus_mistral_seed5.json  corpus_mixed.json  direct_attacks.json  eval_4gpu.json  eval_filter_test.json  eval_input_filter.json  eval_mixed_filter.json  eval_mixed_none.json  eval_no_defense.json  eval_results.json  eval_test.json  eval_v2_4gpu.json  h5_grammar_compile_results.md  redteam.py  redteam2.py  redteam3.py  redteam3_chatdata.json  redteam3_results.json  redteam3_results_part2.json  redteam3_seeded_results.json  redteam4.py  redteam5.py  redteam5_results.json  results_pair1.json  results_pair2.json  ssh_seeded_100.json  ssh_seeded_p2.json  ssh_seeded_p3.json  ssh_seeds.json  test_results.json  v2_results.json  v3_pairA.json_wins_live.jsonl  (+4 more)
harness/cresp/: corpus.json  prompts.json
harness/experiment/: Cargo.toml
harness/experiment/data/corpus/: w1.json  w2.json  w3.json  w4.json  w5.json
harness/experiment/src/: contracts.rs  corpus.rs  db.rs  driver.rs  lib.rs  main.rs  oracle.rs  report.rs  scopes.rs  stats.rs
harness/prompts/: malicious-control.tmpl
harness/seeds/: ApiKeyExfil.json  ChatDataExfil.json  InfraMonitorExfil.json  SshKeyExfil.json  TicketAssistForward.json
harness/seeds_filter_bypass/: ApiKeyExfil.json  SshKeyExfil.json  TicketAssistForward.json
paper/: .gitignore  main.tex
paper/sections/: abstract.tex  conclusion.tex  core.tex  discussion.tex  formal.tex  intro.tex  limitations.tex  method.tex  references.tex  related.tex  results.tex  threat.tex
services/app/: Cargo.toml
services/app/src/: main.rs  scope.rs
src/: db.rs  inference.rs  main.rs
static/css/: style.css
static/js/: desktop.js
templates/: base.html  chat_fragment.html  skills_panel.html  wins_panel.html
