[package]
name = "bank-experiment"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bank-types = { workspace = true }
bank-grammar = { workspace = true }
bank-llama = { workspace = true }
bank-pipeline = { workspace = true }
bank-env = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
