[package]
name = "bank-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bank-types = { workspace = true }
bank-env = { workspace = true }
bank-grammar = { workspace = true }
bank-llama = { workspace = true }
bank-pipeline = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
